[package]
name = "redis_expiremember_module"
version = "1.0.0"
edition = "2021"

[lib]
name = "redis_expiremember_module"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "2.0.7"
lazy_static = "1.0.0"
crossbeam = "0.8.3"

[dev-dependencies]
redis = "0.24.0"
ctor = "0.2.6"
